--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -7,6 +7,7 @@
   <div class="card-header">
     <h5>Development Cost Details</h5>
   </div>
+  </div>
   <form [formGroup]="angForm">
     <div class="card-block">
       <div class="row" style="margin: 1%;">
@@ -46,7 +47,7 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <div class="form-group input-group" style="margin-top: 1%;">
+          <div class="form-group input-group">
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [(ngModel)]="todate" bsDatepicker
@@ -70,7 +71,7 @@
       </div>
     </div>
   </form>
-</div>
+
 
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
   <div class="col-12">
