--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -7,6 +7,7 @@
   <div class="card-header">
     <h5>Payment Collection Plan</h5>
   </div>
+  </div>
   <form [formGroup]="angForm">
     <div class="card-block">
       <div class="form-group row justify-content-md-center" style="margin: 1%;"> <!--  *ngIf="showBranch" -->
@@ -63,7 +64,7 @@
       </div>
     </div>
   </form>
-</div>
+
 
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
   <div class="col-12">
@@ -103,6 +104,7 @@
                   <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
                   <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
                 </tr>
+              </tbody>
               <tbody *ngIf="Tabledata.length ==0">
                 <tr>
                   <td>No Data</td>
