--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,10 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
+
+
+
+
 tfoot {
   background-color: #f1f2f4;
 }
@@ -66,11 +70,13 @@ tfoot {
   flex: 1 1 auto;
   padding: 3px !important;
   color: var(--bs-card-color);
+
 }
 
 .table> :not(caption)>*>* {
   padding: 5px !important;
 }
+
 
 .navbar-header {
   display: flex;
@@ -84,6 +90,8 @@ tfoot {
 body[data-sidebar=dark] .navbar-brand-box {
   background: #2a3042;
   height: 60px !important;
+
+  // width:9000px
 
 }
 
@@ -138,6 +146,7 @@ h5,
   font-weight: 400;
   line-height: 1.5;
   color: var(--bs-gray-700);
+  --bs-table-hover-color: white;
   background-color: var(--bs-custom-white);
   background-clip: padding-box;
   border: 1px solid var(--bs-input-border-color);
@@ -146,6 +155,7 @@ h5,
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
 
 .table-fixed {
   display: block;
@@ -167,32 +177,22 @@ table td.newhighlight {
   font-weight: bold;
 }
 
+
 .td_right {
-  .bold {
-    font-weight: bold;
-  }
-
-  .td_right {
-    text-align: right;
-  }
-
-  .td_left {
-    text-align: left;
-
-    body {
-      overflow: hidden;
-    }
-
-  }
-
-  body {
-    overflow: hidden;
-  }
-
-  body {
-    overflow: hidden;
-  }
+  text-align: right;
 }
+
+.td_left {
+  text-align: left;
+
+}
+
+
+
+body {
+  overflow: hidden;
+}
+
 
 .layout-wrapper {
   max-width: 100px;
@@ -218,4 +218,20 @@ body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu>ul>li:hov
 
 body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu ul li.mm-active .active {
   color: blue !important;
+
+  .td_left {
+    text-align: left;
+  }
+}
+
+
+body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu>ul ul {
+  background-color: #2a3042;
+  width: 1000px !important
+}
+
+.table {
+
+  --bs-table-hover-bg: #a7a3a3 !important;
+
 }
