--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -99,15 +99,28 @@
                   <td class="td_right">{{data?.PO_NO}}</td>
                   <td class="td_right">{{data?.ORDER_AMT}}</td>
                   <td class="td_left">{{data?.PROFORMA_INV_DETAILS}}</td>
-                  <td  class="td_left">{{data?.SALE_INV_DETAILS}}</td>
+                  <td class="td_left">{{data?.SALE_INV_DETAILS}}</td>
                   <td class="td_right">{{data?.INVOICE_AMT}}</td>
                   <td class="td_right">{{data?.DIFF_AMT}}</td>
                 </tr>
-              <tbody *ngIf="Tabledata.length ==0">
+              </tbody>
+              <tbody *ngIf="Tabledata.length == 0">
                 <tr>
                   <td>No Data</td>
                 </tr>
               </tbody>
+              <tfoot style="position: sticky; bottom: 0; text-align: center;">
+                <tr>
+                  <td class="td_left" style="font-weight: bold;">Total</td>
+                  <td class="td_left"> </td>
+                  <td class="td_right"></td>
+                  <td class="td_right" style="font-weight: bold;">{{totalDevelopmentCost}}</td>
+                  <td class="td_left"></td>
+                  <td class="td_left"></td>
+                  <td class="td_right">{{totalDevelopmentCostReceived}}</td>
+                  <td class="td_right">{{totalBalanceDcinReceived}}</td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
