navbar color change , footer color change

--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
-        <h5>Customer wise plan vs actual sale</h5>
+        <h5 style="-webkit-text-fill-color: black;">Customer wise plan vs actual sale</h5>
     </div>
     </div>
     <form [formGroup]="angForm">
