change in css navbar move left

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,7 +129,7 @@ body[data-sidebar=dark] .navbar-brand-box {
   margin-top: 0;
   position: fixed;
   top: 48px !important;
-  box-shadow: white !important;
+  box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
 }
 
 //<<<<<<< Updated upstream
