--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -1,15 +1,6 @@
-
-
-
-<div class="text-center"> 
-    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
-
-    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i> 
-
- </div> 
-
-
-
+<div class="text-center">
+    <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+</div>
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
         <h5>Oil Consumption</h5>
